--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -8,45 +8,18 @@
     <div class="ui fluid raised card chatbox">
       <div class="content">
         <div class="ui feed">
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                 <em>Elliot Fu</em>: Siema cwele
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                 <em>Stevie Feliciano</em>: Chuj ci na imię pedale
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                 <em>Helen Troy</em>: Jeb się na ryj cyganie
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                 <em>Christian Rocha</em>: Maka paka myje kamienie
-              </div>
-            </div>
-          </div>
+          <%= render @messages %>
         </div>
       </div>
       <div class="extra content">
-        <form class="ui reply form">
-        <div class="field">
-          <div class="ui fluid icon input">
-            <input type="text" placeholder="Enter message">
-            <i class="bordered inverted orange edit icon"></i>
+        <%= form_for(@message, html: { class: 'ui reply form', role: 'form'}, url: message_path) do |f| %>
+          <div class="field">
+            <div class="ui fluid icon input">
+              <%= f.text_field :body %>
+              <%= f.button '<i class="bordered inverted orange edit icon"></i>'.html_safe %>
+            </div>
           </div>
-        </div>
-      </form>
+        <% end %>
       </div>
     </div>
   </div>
